--- a/.github/workflows/daily-analysis.yml
+++ b/.github/workflows/daily-analysis.yml
@@ -1,10 +1,12 @@
 name: Daily Facebook Ads Analysis
 
 on:
-  schedule:
-    # Runs at 8:00 AM Pacific Time (4:00 PM UTC during PST, 3:00 PM UTC during PDT)
-    # After the 7am budget restoration completes
-    - cron: '0 16 * * *'
+  # DISABLED: Automatic daily analysis
+  # To re-enable, uncomment the schedule section below
+  # schedule:
+  #   # Runs at 8:00 AM Pacific Time (4:00 PM UTC during PST, 3:00 PM UTC during PDT)
+  #   # After the 7am budget restoration completes
+  #   - cron: '0 16 * * *'
   
   # Allows manual trigger
   workflow_dispatch:
